<resources>
    <string name="app_full_name">ForgetMyPicture</string>
    <string name="open_helper_classname">DatabaseHelper</string>


    <!-- search activity -->
    <string name="search_activity_name">Start a new request</string>
    <string name="search_title">Please enter keywords:</string>
    <string name="search_setup_data_toast">Please set up your data before starting a new Search</string>
    <string name="search_keywords_send_btn">Send</string>
    <string name="search_keywords_hint">Enter keywords here</string>
    <string name="search_started_toast">Search started</string>
    <string name="search_failed_toast">Failed to create search</string>
    <string name="search_kind_checkbox">Quick search</string>
    <string name="search_select_original_pic">Select picture</string>
    <string name="search_no_picture_selected">No Picture selected</string>

    <!-- account activity -->
    <string name="account_activity_name">My Account</string>
    <string name="account_title">Your account :</string>
    <string name="account_id_card">Your ID Card :</string>
    <string name="account_name">Family name: %s</string>
    <string name="account_forename">First name: %s</string>
    <string name="account_email">E-mail: %s</string>
    <string name="account_set_id_card">Set ID card</string>
    <string name="account_not_registered">Your are not registered yet !</string>
    <string name="account_selfies">Your selfies</string>

    <!-- user_set_up activity -->
    <string name="user_setup_activity_name">Set up your data</string>
    <string name="user_setup_title">Please fill in this form:</string>
    <string name="user_setup_name">Family name:</string>
    <string name="user_setup_forename">First name:</string>
    <string name="user_setup_email">E-mail address:</string>
    <string name="user_setup_selfie">Please take a selfie:</string>
    <string name="user_setup_save_failed_toast">Failed to save data. Please retry later.</string>
    <string name="user_setup_invalid_toast">Invalid data entered.</string>
    <string name="user_setup_selfie_desc">Selfie thumbnail</string>

    <!-- id_card_setup_activity -->
    <string name="id_card_setup_activity_name">Additional information</string>
    <string name="id_card_setup_thumb_desc">ID card picture thumbnail</string>
    <string name="id_card_setup_title">Please take a picture of your ID card</string>
    <string name="id_card_setup_help">This picture will only be used to fill the dereferencing form.\nYou can hide any data irrelevant for identification.</string>
    <string name="id_card_motive_title">Please add a motive for your request:</string>
    <string name="id_card_motive_help">For each selected URL, please explain:\n(1) how the linked URL relates to you (or, if you are submitting this form on behalf of someone else, why the page is about that person); and\n(2) why the content on this URL in search results is distributed unlawfully, inaccurate, or outdated.</string>

    <!-- homepage activity -->
    <string name="homepage_activity_name">ForgetMyPicture</string>
    <string name="homepage_new_request">Start a new request</string>
    <string name="homepage_requests_panel">My requests</string>
    <string name="homepage_menu_account">My account</string>
    <string name="homepage_menu_settings">Settings</string>

    <!-- request_panel activity -->
    <string name="request_panel_activity_name">Requests Panel</string>
    <!-- requests_list fragment -->
    <string name="requests_list_title">Your requests:</string>
    <string name="requests_list_no_requests">No request</string>
    <string name="request_list_help">About your requests:\nThe fetching searches are still looking for pictures on the Internet.\nProcessing means that your searches are being processed by our servers.\nThe pending searches are waiting for your action.\nUnlocking your searches allow you to have more information on them and to launch the dereferencing and deletion procedures for these searches.\nThe finished searches are stored in your request history</string>
    <string name="requests_list_help">Help</string>
    <string name="requests_list_links">More info</string>
    <string name="request_item_processed">%d%% processed</string>
    <string name="request_item_fetched">%d%% fetched</string>
    <string name="request_item_results">- %d results</string>
    <string name="request_item_id">%1$s search No. %2$d</string>
    <!-- request_infos fragment -->
    <string name="request_infos_title">%1$s search No. %2$d</string>
    <string name="request_infos_status">Status : %s</string>
    <string name="request_infos_stats">Stats: Aprox. %1$d/%2$d pictures fetched, %3$d results processed</string>
    <string name="request_infos_motive">Motive : %s</string>
    <string name="request_infos_keywords">Keywords: %s</string>
    <string name="request_infos_no_results">No result yet</string>
    <string name="request_infos_send_email_btn">Send e-mail</string>
    <string name="request_infos_fill_form_btn">Fill form</string>
    <string name="request_infos_id_card_toast">Additional information needed</string>
    <string name="request_infos_pay_before_check">You have to unlock this request to see pictures origin and to remove them</string>
    <string name="request_infos_pay_btn">Pay</string>
    <string name="request_infos_payed_toast">Thank you for your purchase</string>
    <string name="request_infos_pay_title">Unlock advanced features to continue</string>
    <string name="request_infos_form_sent">Google Form filled and sent !</string>
    <string name="request_infos_email_sent">E-mail sent !</string>
    <string-array name="result_item_match">
        <item>%d%% match</item>
        <item>Not processed yet</item>
    </string-array>
    <string name="result_item_pic_ref_url">Site: %s</string>
    <string name="result_item_thumb_desc">Matched picture</string>

    <!-- settings activity -->
    <string name="settings_activity_name">Settings</string>
    <string name="settings_data_on_wifi">Data on Wi-fi only</string>
    <string name="settings_data_on_wifi_sum">Enable networking only when connected to Wi-fi networks</string>
    <string name="settings_wipe">Wipe all data</string>
    <string name="settings_wipe_btn">Wipe</string>
    <string name="settings_wipe_warning">WARNING : This will erase all your data from the app and our server.\nProceed with caution.</string>
    <string name="settings_wipe_toast">Data wiped</string>
    <string name="settings_offline_mode">Offline mode</string>
    <string name="settings_offline_mode_sum">Prevent this app from using network resources</string>
    <string name="settings_match_threshold">Match threshold</string>
    <string-array name="settings_match_threshold_sum">
        <item>We will only show you pictures we are %d%% sure you are on it</item>
        <item>All pictures will be shown, even if you are not on it</item>
    </string-array>

    <!-- enums values display -->
    <string name="enum_request_status_fetching">Fetching</string>
    <string name="enum_request_status_processing">Processing</string>
    <string name="enum_request_status_pending">Pending</string>
    <string name="enum_request_status_finished">Finished</string>
    <string name="enum_request_status_payed">Unlocked</string>
    <string name="enum_request_kind_quick">Quick</string>
    <string name="enum_request_kind_exhaustive">Exhaustive</string>

    <!-- misc -->
    <string name="cancel">Cancel</string>
    <string name="ask_continue">Continue ?</string>
    <string name="take_pic">Take</string>
    <string name="save_btn">Save</string>
    <string name="ok">Ok</string>
    <string name="saved_toast">Saved</string>

    <!-- agreement -->
    <string name="agreement_title">User agreement</string>
    <string name="search_agreement">I certify that I am the one who launched the search procedure. I also accept that these searches are done and to be considered as fully responsible of these searches.</string>
    <string name="agreement">When using the dereferencing and deletion service, I certify that I have read and accepted the following conditions:\n1- I certify that  the personal information I used to identify myself is true and correct and I accept any liability whatsoever concerning the given information.\n2- During the 14 days following the beginning of the deletion and the dereferencing procedure, I authorize and mandate ForgetMyPicture to fill in the Google form for dereferencing requests https://support.google.com/legal/contact/lr_eudpa?product=websearch&amp;hl=en and send it designating me as the requester and using my personal information.\n3- During the 14 days following the beginning of the deletion and the dereferencing procedure, I authorize and mandate ForgetMyPicture to email website host administrators for deletion requests using the warning mail available on this page.\n4- For all the photos that I have selected, I certify that I am the one who launched the deletion and dereferencing procedure and I also accept to be considered as fully responsible of deleting or dereferencing these images.</string>
    <string name="email_preview">Dear Sir or Madam,\n\n\nOn your Internet domain, I have found a detrimental photo of myself, which breaches my rights and my image. I would like to draw your attention to this situation.\n\nIndeed, under Article 16 (ex Article 286 TEC) Title II of the Treaty on European Union and the Treaty on the Functioning of the European Union, and the Data Protection Act, I request that the photo be deleted [Photo URL] of your Internet domain.\n\nWithin two months, you have to respond to my request. Please contact me at the following email address [your e-mail address].\n\nI should like also to remind you that, under the Data Protection Act, if an individual suffers damage, they are entitled to claim compensation from you.\n\nIn the absence of action from you, I shall be compelled to take legal action by exercising later my right to object\n\nThanking you in advance for your diligence,\n\nYours faithfully,\n\n[your first name] [your family name]</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>

    <!-- links -->
    <string name="info_links_msg">If you want more information about the dereferencing and deletion procedures (especially if within two months, the application requests do not succeed), you can search on ICO\'s site https://ico.org.uk .</string>
    <string name="id_card_invalid_toast">Invalid ID card</string>
    <string name="edit_btn">Edit</string>
    <string name="info_dialog_title">Additional information</string>
    <string name="search_info_btn">More info</string>
    <string name="search_info_msg">To begin a search, enter some keywords and optionally tick the quick search box to add a picture that you wish to dereference or delete. The quick search looks for comparable pictures to the one you have uploaded, whereas the exhaustive search - if the quick search box is not ticked - looks for comparable pictures to the selfie thanks to facial recognition.</string>
    <string name="email_preview_btn">See e-mail</string>



</resources>
