<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.IdCardSetup"
    style="@style/basic_root_layout_white_background_with_padding">

    <TextView
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_card_setup_title"
        android:textAppearance="?android:textAppearanceLarge"/>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_below="@id/title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/id_card_setup_help"
            android:textAppearance="?android:textAppearanceMedium"/>

        <Button
            android:layout_weight="1"
            android:text="@string/take_pic"
            android:onClick="takeIdCardFromUI"
            style="@style/small_button_turquoise_background_and_white_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical" />

    </LinearLayout>


    <Button
        android:id="@+id/save_btn"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveIdCardFromUI"
        style="@style/small_button_turquoise_background_and_white_text"
        android:visibility="gone"
        android:text="@string/save_btn"/>

    <ImageView
        android:id="@+id/idcard_thumb"
        android:layout_below="@id/content_layout"
        android:layout_above="@id/save_btn"
        android:adjustViewBounds="true"
        android:contentDescription="@string/id_card_setup_thumb_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>