<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.Account"
    style="@style/basic_root_layout_white_background_with_padding">

    <TextView
        android:id="@+id/title"
        android:text="@string/account_title"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/empty"
        android:text="@string/activity_no_account"
        android:padding="10dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@id/title"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_below="@id/title"
        android:id="@+id/content_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/forename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:text="@string/account_id_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"/>

        <ImageView
            android:id="@+id/idcard_thumb"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/id_card_setup_thumb_desc" />

        <TextView
            android:text="@string/account_selfies"
            android:textAppearance="?android:textAppearanceMedium"
            android:maxHeight="@dimen/thumb_max_height"
            android:maxWidth="@dimen/big_thumb_max_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/selfies_container"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/small_button_turquoise_background_and_white_text"
            android:text="@string/account_set_id_card"
            android:onClick="setIdCardFromUI"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/small_button_turquoise_background_and_white_text"
            android:text="@string/edit_btn"
            android:onClick="editAccountFromUI"/>
        
    </LinearLayout>


</RelativeLayout>
